Initialize typescript, extends https://github.com/tsconfig/bases/blob/main/bases/strictest.json

--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
     "typescript"
   ],
   "author": "araya <araya@araya.dev>",
-  "license": "Unlicense"
+  "license": "Unlicense",
+  "devDependencies": {
+    "@tsconfig/strictest": "^2.0.1",
+    "@types/node": "^20.4.5",
+    "typescript": "^5.1.6"
+  }
 }
