--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Node.js + TS project template",
   "scripts": {
+    "dev": "node -r @swc-node/register src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,6 +13,9 @@
   "author": "araya <araya@araya.dev>",
   "license": "Unlicense",
   "devDependencies": {
+    "@swc-node/core": "^1.10.4",
+    "@swc-node/register": "^1.6.6",
+    "@swc/core": "^1.3.72",
     "@tsconfig/strictest": "^2.0.1",
     "@types/node": "^20.4.5",
     "typescript": "^5.1.6"
