--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Node.js + TS project template",
   "scripts": {
-    "dev": "node -r @swc-node/register src/main.ts",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,6 +18,7 @@
     "@swc/core": "^1.3.72",
     "@tsconfig/strictest": "^2.0.1",
     "@types/node": "^20.4.5",
+    "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
   }
 }
