--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js + TS project template",
   "scripts": {
     "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [
     "template",
@@ -13,11 +14,14 @@
   "author": "araya <araya@araya.dev>",
   "license": "Unlicense",
   "devDependencies": {
+    "@jest/globals": "^29.6.2",
     "@swc-node/core": "^1.10.4",
     "@swc-node/register": "^1.6.6",
     "@swc/core": "^1.3.72",
+    "@swc/jest": "^0.2.27",
     "@tsconfig/strictest": "^2.0.1",
     "@types/node": "^20.4.5",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
   }
