--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     "@swc/jest": "^0.2.27",
     "@tsconfig/strictest": "^2.0.1",
     "@types/node": "^20.4.5",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.0",
     "typescript": "^5.1.6"
   }
 }
